# restic-monitor

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/cli/: mod.rs  snapshots.rs  utils.rs
src/restic/: mod.rs  snapshots.rs
