[package]
name = "restic-monitor"
version = "0.1.0"
authors = ["Toni Peltonen <peltzi@peltzi.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
seahorse = "0.7.1"
